exports[`test should render closed facet with value 1`] = `
<a
  className="search-navigator-facet-header"
  href="#"
  onClick={[Function]}>
  <svg
    height="10"
    style={
      Object {
        "paddingTop": 3,
      }
    }
    viewBox="0 0 1792 1792"
    width="10">
    <path
      d="M1363 877l-742 742q-19 19-45 19t-45-19l-166-166q-19-19-19-45t19-45l531-531-531-531q-19-19-19-45t19-45l166-166q19-19 45-19t45 19l742 742q19 19 19 45t-19 45z"
      style={
        Object {
          "fill": "currentColor ",
        }
      } />
  </svg>
   
  foo
   
  <svg
    height="8"
    style={
      Object {
        "paddingLeft": 8,
        "paddingTop": 5,
      }
    }
    viewBox="0 0 1792 1792"
    width="8">
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
      fill="#4b9fd5" />
  </svg>
</a>
`;

exports[`test should render closed facet without value 1`] = `
<a
  className="search-navigator-facet-header"
  href="#"
  onClick={[Function]}>
  <svg
    height="10"
    style={
      Object {
        "paddingTop": 3,
      }
    }
    viewBox="0 0 1792 1792"
    width="10">
    <path
      d="M1363 877l-742 742q-19 19-45 19t-45-19l-166-166q-19-19-19-45t19-45l531-531-531-531q-19-19-19-45t19-45l166-166q19-19 45-19t45 19l742 742q19 19 19 45t-19 45z"
      style={
        Object {
          "fill": "currentColor ",
        }
      } />
  </svg>
   
  foo
   
</a>
`;

exports[`test should render open facet with value 1`] = `
<a
  className="search-navigator-facet-header"
  href="#"
  onClick={[Function]}>
  <svg
    height="10"
    style={
      Object {
        "paddingTop": 3,
      }
    }
    viewBox="0 0 1792 1792"
    width="10">
    <path
      d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
      style={
        Object {
          "fill": "currentColor ",
        }
      } />
  </svg>
   
  foo
   
</a>
`;

exports[`test should render open facet without value 1`] = `
<a
  className="search-navigator-facet-header"
  href="#"
  onClick={[Function]}>
  <svg
    height="10"
    style={
      Object {
        "paddingTop": 3,
      }
    }
    viewBox="0 0 1792 1792"
    width="10">
    <path
      d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
      style={
        Object {
          "fill": "currentColor ",
        }
      } />
  </svg>
   
  foo
   
</a>
`;

exports[`test should render without link 1`] = `
<span
  className="search-navigator-facet-header">
  foo
</span>
`;
